fix the bug in 数组、指针.md

--- a/指针.md
+++ b/指针.md
@@ -122,7 +122,7 @@ int a[10] = {1, 2, 3};
 int *p = a;
 
 => 值：a[i] = *(a+i) = *(p+i) = p[i];
-=> 地址：&a[i] = a+i = p+i = p[i];
+=> 地址：&a[i] = a+i = p+i = &  p[i];
 例如 求一个数组长度：
     sizeof(a) / sizeof(a[0]) = sizeof(a) / sizeof(*a);
 ```
@@ -266,7 +266,7 @@ int *const p; // or int * const p;
 
 #### 特点
 
-指针指向常量化，无法修改指针的指向。即限定`p`
+指针的指向常量化，无法修改指针的指向。即限定`p`
 
 ```c
 	int i = 1;
