--- a/数组.md
+++ b/数组.md
@@ -102,7 +102,7 @@ termination:
 
 ```c
 // 例如，在字符数组实际分配6`char`长度，尾部用\0结尾，表示字符。如下图所示。
-char str[] = ”hello“;
+char str[] = "hello";
 ```
 
 ![image-20220707171952461](https://raw.githubusercontent.com/Wang-Kang711/Image/main/common/202207071719584.png)
