--- a/构造类型.md
+++ b/构造类型.md
@@ -56,18 +56,18 @@ struct student_st
 ## 使用
 
 > 结构体
->
-> ​	成员引用：	变量名.成员名
->
-> ​	指针引用：	指针->成员名 / (*指针).成员名
+> 
+> ​    成员引用：    变量名.成员名
+> 
+> ​    指针引用：    指针->成员名 / (*指针).成员名
 
 ```c
 // 完全初始化，嵌套初始化
 struct student_st student_wk_st = 
-			{123,"WK",{2022,7,9},99,100}; // 初始化
+            {123,"WK",{2022,7,9},99,100}; // 初始化
 // or 部分初始化（使用初始化器）
 struct student_st student_wk_st = 
-			{.id = 123, .name = "WK", .math = 99};
+            {.id = 123, .name = "WK", .math = 99};
 
 student_wk_st.id=112233; // 某个类型的赋值
 // or 间接引用
@@ -75,8 +75,6 @@ struct stustruct student_s *p = &student_wk_st;
 p->id = 110;
 (*p).id = 12
 ```
-
-
 
 ## 占用内存空间大小
 
@@ -87,10 +85,6 @@ p->id = 110;
 **函数中一般不直接传递结构体作为实参，占用内存空间大（值传递）**。需要传递时一般采用指针结构体，传递指针(地址传递)。
 
 ## 柔性数组
-
-
-
-
 
 # 共用体
 
@@ -107,8 +101,6 @@ union name {
     ......
 }；// 需要分号
 ```
-
-
 
 ## 嵌套定义与使用
 
@@ -132,13 +124,17 @@ struct student_st
 
 ### 应用
 
-例如，现在要求 对一个32无符号整型 高16位与低16位进行叠加。常规做法：
+1. 例如，现在要求 对一
+   
+   常规做法：
+   
+   union与struct可以互相嵌入使用
 
 ```c
 uint32_t a = 0x11223344;
-
-int high =  a >> 16;
-int low = a & 0xFFFF;
+/*  注意位掩码的使用  */
+int high =  (a >> 16) & 0xffff;
+int low = a & 0xffff;
 
 printf("%x\n", high + low);
 ```
@@ -177,6 +173,14 @@ void main()
 }
 ```
 
+2. 大小端判定
+
+可以通过
+
+```c
+
+```
+
 ## 占用内存空间大小
 
 共用体占用应为所有成员中占用最大的。
@@ -196,9 +200,9 @@ union
 
 成员中
 
-- ​	p.x -> 8字节
-- ​	p.a -> 1字节
-- ​	p.b -> 4字节
+- ​    p.x -> 8字节
+- ​    p.a -> 1字节
+- ​    p.b -> 4字节
 
 因此，union占用 max(8, 1, 4) = 8字节。
 
@@ -212,7 +216,7 @@ union
 
 ```c
 union {
-	struct {
+    struct {
         char a:1;// 占1位存储空间
         char b:2;// 占2位
         char c:1;// 占1位
@@ -223,7 +227,7 @@ union {
 
 int main() {
     p.y = 11; 
-    
+
     printf("a=%d\n", p.x.a);
     printf("b=%d\n", p.x.b);
     printf("c=%d\n", p.x.c);
@@ -237,22 +241,18 @@ termination
 ```
 
 > 小端&大端
->
+> 
 > 由于硬件的不同，存储特点不同。例如 x86平台一般为小端存储(低位)，arm平台一般为大端存储(高位)。
 
 union中存储情况如下，以补码储存：
 
 ![image-20220710121519492](https://raw.githubusercontent.com/Wang-Kang711/Image/main/common/202207101215536.png)
 
-|      | 补码        | 原码 |
-| ---- | :---------- | ---- |
-| a    | 1(负数补码) | -1   |
-| b    | 01          | 1    |
-| c    | 1           | -1   |
-
-
-
-
+|     | 补码      | 原码  |
+| --- |:------- | --- |
+| a   | 1(负数补码) | -1  |
+| b   | 01      | 1   |
+| c   | 1       | -1  |
 
 # 枚举
 
