--- a/指针.md
+++ b/指针.md
@@ -1,7 +1,5 @@
 # 变量与地址
 
- 
-
 ```c
 int i = 10;
 i 为变量，用于使用者记忆、使用。
@@ -11,7 +9,7 @@ i 为变量，用于使用者记忆、使用。
 # 指针与指针变量
 
 > 指针即为变量的地址值。
->
+> 
 > 指针变量则为 用于储存一个地址值(指针) 的变量。
 
 ![image-20220708144732060](https://raw.githubusercontent.com/Wang-Kang711/Image/main/common/202207081447103.png)
@@ -21,8 +19,6 @@ i,p,q为变量，其中p,q存储的是指针值，因此为指针变量。
 *p为到内部存储指针地址中读取对于的值因此
 *p -> *(0x2000) -> 1
 ```
-
-
 
 # 直接访问与间接访问
 
@@ -77,8 +73,6 @@ int* p;
 void *memcpy(void *dest, const void *src, size_t n);
 ```
 
-
-
 # 定义与初始化的书写规则
 
 `指针类型所占地址空间大小相同`，都是存储某一地址值。不同机器所占空间不同
@@ -99,8 +93,6 @@ printf("float* -> %ld\n", sizeof(c));
 ```
 
 `但不同类型的指针只能用于对应的变量类型。`根据指针类型读取对应地址中内存储存长度。
-
-
 
 # 指针运算
 
@@ -128,7 +120,7 @@ int *p = a;
 ```
 
 > 本质区别：数组名a是表示一个数组的 `常量`,而指针p则是指向a的一个`变量`
->
+> 
 > a++(False)    p++(True)
 
 ## 指针与二维数组
@@ -167,8 +159,6 @@ printf("%d\n", p[1][0][1]);
 > 6
 ```
 
-
-
 ## 指针与字符数组
 
 字符数组是静态区的 常量。而指针是指向静态区常量的地址。
@@ -190,7 +180,7 @@ puts(arr);
 
 **指针对字符的修改。**
 
-```c 
+```c
 char *arr = "hello";
 printf("sizeof(arr) -> %ld\n", sizeof(arr)); //8,64位机地址长度
 printf("strlen(arr) -> %ld\n", strlen(arr));    
@@ -203,8 +193,6 @@ strcpy(arr, "world");
 puts(arr);
 ```
 
-
-
 # `const`与指针
 
 ## `const`用途
@@ -216,14 +204,17 @@ puts(arr);
 ```c
 const float pi = 3.14;
 ```
+
 但此时存在问题，const虽然限定了`pi`为常量无法直接修改，但可通过指针间接访问修改pi的值
+
 ```c
     const float pi = 3.14;
 
-    float *p = &pi;
+    float *p = π
     *p = 3.234;
     printf("%f\n", pi);
 ```
+
 如何保障指针的运用不对 某些变量进行修改那？ => 指针常量与常量指针
 
 ## 指针常量与常量指针
@@ -251,7 +242,7 @@ int const *p
 // 但p即指向值可修改，即p = &j;
     *p = j;
 // true, 可以直接修改目标值。
-	i = j;
+    i = j;
 
     printf("%d\n", i);
 ```
@@ -266,18 +257,18 @@ int *const p; // or int * const p;
 
 #### 特点
 
-指针的指向常量化，无法修改指针的指向。即限定`p`
+指针指向常量化，无法修改指针的指向。即限定`p`
 
 ```c
-	int i = 1;
+    int i = 1;
     int j = 100;
-    
+
     int *const p = &i;
-    
+
 // true, 可以修改目标值。
     *p = j;
 // false, 指针指向无法修改。
-	p = &j;
+    p = &j;
 ```
 
 ### 合并使用
@@ -295,12 +286,10 @@ char *strcpy(char *dest, const char *src);
 void *memcpy(void *dest, const void *src, size_t n);
 ```
 
-
-
 # 指针数组与数组指针
 
 > 指针数组：本质上是存储指针的一个`数组`。
->
+> 
 > 数组指针：首先这个变量是`一个指针`，其次，”数组”修饰这个指针，意思是说这个指针存放着一个数组的首地址，或者说这个指针指向一个数组的首地址。可进行跳跃
 
 ```c
@@ -312,7 +301,5 @@ char name[][] = {{"hello", "world"}, {"baby", "lady"}};
 // 一个指针，指向地址值，[2]只是提示行跳跃间歇。
 char (*name)[2] = name;
 ```
-
-
 
 # 多级指针
